listo para publicar

--- a/backend/TuringClothes/TuringClothes/appsettings.json
+++ b/backend/TuringClothes/TuringClothes/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db15398.databaseasp.net; Database=db15398; Uid=db15398; Pwd=dN=4R5j-3f_H;"
+  }
 }
